# VoidBot

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  DESCRIPTION.md  Dockerfile  LICENSE
src/: channel_manager.rs  description.rs  error_manager.rs  handler.rs  main.rs  managed_channel.rs  reminder_manager.rs
src/commands/: allplaying.rs  eval.rs  mod.rs  ping.rs  playing.rs  remindme.rs  roll.rs  teams.rs  version.rs
src/models/: managed_channel.rs  mod.rs  reminder.rs
