[package]
name = "voidbot"
version = "0.6.1"
authors = ["Noah Shuart <shuart.noah.s@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serenity = "0.5"
lazy_static = "1.3.0"
toml = "0.4"
bincode = "1.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }