[package]
name = "voidbot"
version = "0.7.0"
authors = ["Noah Shuart <shuart.noah.s@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serenity = "0.5"
toml = "0.4"
bincode = "1.1"
humantime = "1.2"
regex = "1.0"
meval = "0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
